--- a/src/css/app.css
+++ b/src/css/app.css
@@ -19,4 +19,15 @@
 {
     color: blue;
 }
+.card-poke
+{
+    background-color: bisque;
+    border-radius: 8px;
+}
 
+.dashboard
+{
+    background-color: grey;
+    display: flex;
+    flex-wrap: wrap;
+}
